# Raptor

./: .gitignore  README.md  pyproject.toml
benchmarks/: compare.ipynb  compare.py
benchmarks/results/: compare_results.json
microtorch/: engine.py  nn.py  ops.py  optim.py  utils.py
notebooks/: compare.ipynb  graphlens.ipynb  tensor_basics.ipynb  training.ipynb
notebooks/benchmarks/results/: compare_results.json
raptor/: __init__.py  engine.py  nn.py  ops.py  optim.py  utils.py
raptorgraph/: client.py  server.py  tracer.py
raptorgraph/static/: graph.js  index.html  style.css
tmp/: history.csv  history.json
