[project]
name = "raptor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
